# newuisquad

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
agent/: Cargo.toml
agent/src/: ban_enforcer.rs  batch_uploader.rs  config.rs  event_manager.rs  file_ops.rs  log_parser.rs  log_watcher.rs  main.rs  offset_store.rs  player_tracker.rs  protocol.rs  rcon_listener.rs  ws_client.rs
backend/: Cargo.toml  Dockerfile  package-lock.json
backend/.next/: trace  trace-build
backend/migrations/: 001_create_servers.sql  002_create_rcon_logs.sql  003_create_server_logs.sql  004_create_file_ops.sql  005_add_token_to_servers.sql  006_create_admin_users.sql  007_create_tk_settings.sql  008_create_afk_settings.sql  009_create_broadcast_settings.sql  010_create_announcements.sql  011_create_auto_replies.sql  012_create_team_settings.sql  013_create_seed_settings.sql  014_create_damage_notify_settings.sql  015_create_abnormal_damage_config.sql  016_create_abnormal_damage_rules.sql  017_create_abnormal_damage_logs.sql  018_create_fly_events.sql  019_create_kill_events.sql  020_create_player_info.sql  021_create_match_events.sql  022_create_system_logs.sql  023_create_chat_messages.sql  024_create_explosion_events.sql  025_create_deployable_damaged_events.sql  026_create_tick_rate_events.sql  027_expand_damage_notify_settings.sql  028_create_team_switch_config.sql  029_add_kill_events_fields.sql  030_add_tk_apology_fields.sql  031_add_damage_notify_kill.sql  032_create_permission_system.sql  033_permission_hierarchy.sql  034_chat_moderation.sql  035_audit_and_config.sql  036_identity_resolution.sql  037_workflows.sql  038_expand_damage_notify_templates.sql  039_expand_tk_templates.sql  040_add_permission_version.sql  (+2 more)
backend/src/: clickhouse.rs  config.rs  db.rs  lib.rs  main.rs  protocol.rs  redis.rs
backend/src/api/: abnormal_damage.rs  admin_users.rs  afk_settings.rs  agent_ws.rs  analytics.rs  announcements.rs  audit_config.rs  auth.rs  auth_middleware.rs  auto_replies.rs  bans.rs  broadcast_settings.rs  chat.rs  chat_moderation.rs  damage_notify.rs  files.rs  game_services.rs  logs.rs  mod.rs  operation_logs.rs  permissions.rs  player_profile.rs  player_tracker.rs  rate_limiter.rs  rcon.rs  seed_settings.rs  server_control.rs  server_health.rs  server_info.rs  servers.rs  squad_events.rs  squadjs_report.rs  team_settings.rs  team_switch.rs  tk_settings.rs  workflows.rs
backend/src/clickhouse/: schema.rs
backend/src/log_watcher/: watcher.rs
backend/src/models/: abnormal_damage.rs  admin_user.rs  afk_settings.rs  announcement.rs  auto_reply.rs  mod.rs  rcon_log.rs  (+11 more)
(+111 files in other folders)
