[package]
name = "game-server-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
zstd = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
regex = "1"
