[package]
name = "admin-console-backend"
version = "0.1.0"
edition = "2021"
default-run = "admin-console-backend"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
rand = "0.8"
hex = "0.4"
bcrypt = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
